Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132585

error: ignoring return value of function declared with 'nodiscard' attribute [-Werror,-Wunused-result]

XMLWordPrintable

    • macOS
    • ba88f9e58 (dev), c4131e1af (6.9), 1912b806c (6.8)

      /Users/qt/work/qt/qtapplicationmanager/src/tools/packager/packagingjob.cpp:140:13: error: ignoring return value of function declared with 'nodiscard' attribute [-Werror,-Wunused-result]
                  f.open(QFile::ReadOnly);
                  ^~~~~~ ~~~~~~~~~~~~~~~
      1 error generated.
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/9fbd248ed2cbcf5c4f638046664181bd5ea315e1/MacOSMacOS_14arm64MacOSMacOS_14arm64Clangqtci-macos-14-arm-106-50a7b1UseConfigure_WarningsAreErrors/6944d0fb5c9bb2b8aacb753f7214751289e5b521/build_1735924114/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1735923891

      Tested changes (refs/builds/qtci/dev/1735923064):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/610347/1 Bump version to 6.10.0
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/614819/2 Update dependencies on 'dev' in qt/qtapplicationmanager

        For Gerrit Dashboard: QTBUG-132585
        # Subject Branch Project Status CR V

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes