Fix compilation against Qt 6.10 (nodiscard)

Change-Id: Ifc795df4dbdb3195450ef1e09b3d045bbbb0da0b
Fixes: QTBUG-132585
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ba88f9e584f2ff593c680024ca25d85434be2c53)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c4131e1af1fe5f86bbdb7a3768657c0efc17e296)